made the css style awesome

--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,75 @@
+body {
+    margin: 0;
+    padding: 1% 15% 0 15%;
+}
 
+img {
+    width: 130px;
+    margin-top: 10%;
+}
+
+div {
+    margin: 0 auto;
+}
+
+p, b {
+    font-size: 20px;
+    font-family: "Arial";
+}
+
+span {
+    margin: 10px 10px 30px;
+}
+
+a:link{
+    text-decoration: none;
+    color:blue;
+}
+
+a:hover{
+    text-decoration: underline;
+}
+
+.middle {
+    height:750px;
+    display:flex;
+}
+
+.top {
+    margin-bottom: 50px;
+}
+
+.col {
+    height: 150px;
+    margin-top: 30px;
+    margin-bottom: 60px;
+}
+
+.right {
+    float:right;
+}
+
+.midl {
+    margin: 30px 15% 60px 15%;
+}
+
+.midr {
+    margin: 30px 15% 60px 0;
+}
+
+.midr img {
+    margin-bottom: 7%;
+}
+
+.midl img {
+    margin-bottom: 25%;
+}
+
+.center {
+    width:100%;
+    text-align: center;
+}
+
+.smallfont {
+    font-size: 15px;
+}
